--- a/airbnb_general_graph.ipynb
+++ b/airbnb_general_graph.ipynb
@@ -19,10 +19,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*The two dataframes are imported from the URLs\n",
-    "*Then a new column is created for the corresponding city names\n",
-    "*Then a combined dataframe is created using the concat function\n",
-    "*Finally, a histogram is plotted with the count of reviews vs. years"
+    "## Notes\n",
+    "* The two dataframes are imported from the URLs\n",
+    "* Then a new column is created for the corresponding city names\n",
+    "* Then a combined dataframe is created using the concat function\n",
+    "* Finally, a histogram is plotted with the count of reviews vs. years"
    ]
   },
   {
@@ -100,11 +101,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Graph Observations\n",
     "The graph presents the number of counts of AirBnB reviews per year from 2009 until 2022 in London (blue) and in Athens (orange).\n",
     "Assuming that the number of reviews corresponds to the number of AirBnB stays we can make the following observations.\n",
-    "*The number of people using AirBnB in London is 2 to 3 times higher compared to Athens. This can be explained by the fact that London is in the top 3 of the most visited cities in the world.\n",
-    "*For both cities the use of AirBnB seems to be increasing exponentially upto 2019.\n",
-    "*In 2020 and 2021 a sudden and deep decrease in AirBnB uses was observed which can be explained by the restrictions of travelling during the COVID-19 pandemic. Both cities are popular for international tourism and the graph shows how significantly they have been impacted during the coronavirus outbreak."
+    "* The number of people using AirBnB in London is 2 to 3 times higher compared to Athens. This can be explained by the fact that London is in the top 3 of the most visited cities in the world.\n",
+    "* For both cities the use of AirBnB seems to be increasing exponentially upto 2019.\n",
+    "* In 2020 and 2021 a sudden and deep decrease in AirBnB uses was observed which can be explained by the restrictions of travelling during the COVID-19 pandemic. Both cities are popular for international tourism and the graph shows how significantly they have been impacted during the coronavirus outbreak."
    ]
   }
  ],
