jupyter commends update

--- a/airbnb_general_graph.ipynb
+++ b/airbnb_general_graph.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The impact of Covid-19 on AirBnB stays in London and Athens"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -21,9 +28,9 @@
    "source": [
     "## Notes\n",
     "* The two dataframes are imported from the URLs\n",
-    "* Then a new column is created for the corresponding city names\n",
+    "* Then a new column is created with the corresponding city names\n",
     "* Then a combined dataframe is created using the concat function\n",
-    "* Finally, a histogram is plotted with the count of reviews vs. years"
+    "* Finally, a histogram is plotted with the count of reviews vs. year"
    ]
   },
   {
